--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -11,7 +11,8 @@ plugins {
     id 'java-library'
     id 'jacoco'
     id 'com.github.spotbugs' version "4.7.0"
-    id 'checkstyle'
+    //id 'checkstyle'
+    id 'pmd'
 }
 
 repositories {
@@ -33,4 +34,12 @@ dependencies {
 spotbugs {
     ignoreFailures = true
     spotbugsTest.enabled = false;
-}	
+}
+
+pmd {
+    ignoreFailures = true
+    consoleOutput = true
+    toolVersion = "6.21.0"
+    rulesMinimumPriority = 5
+    ruleSets = ["category/java/errorprone.xml", "category/java/bestpractices.xml"]
+}
