--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -13,6 +13,9 @@ plugins {
     id 'com.github.spotbugs' version "4.7.0"
     //id 'checkstyle'
     id 'pmd'
+    // For CPD
+	id 'de.aaschmid.cpd' version '3.1'
+    id 'ru.vyarus.quality' version '4.0.0'
 }
 
 repositories {
@@ -42,4 +45,13 @@ pmd {
     toolVersion = "6.21.0"
     rulesMinimumPriority = 5
     ruleSets = ["category/java/errorprone.xml", "category/java/bestpractices.xml"]
+}
+
+quality {
+    cpd = true // false to disable plugin configuration
+    cpdUnifySources = true // false to not modify cpdCheck task sources
+}
+
+cpd {
+    ignoreFailures = true
 }
