--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -57,6 +57,13 @@ pmd {
     ignoreFailures = true
     consoleOutput = true
     toolVersion = "6.21.0"
+    rulesMinimumPriority = 5
+    ruleSets = ["category/java/errorprone.xml",
+                "category/java/bestpractices.xml",
+                "category/java/codestyle.xml",
+                "category/java/documentation.xml",
+                "category/java/security.xml"
+                ]
 }
 
 /*
